# csad2526ki405vadymlukyanenko18

./: CMakeLists.txt  COPILOT_LOGS.md  ci.sh  math_operations.cpp  math_operations.h
.github/workflows/: ci.yml
lab2_spi/: spi_master.v  spi_tb.v
tests/: unit_tests.cpp
